# ibtest

./: CMakeLists.txt
benchmark/gpu2gpu/: CMakeLists.txt  gpg2gpu_kernel.cl  main.cpp
benchmark/ib/: CMakeLists.txt  main.cpp  pingpong.c
include/: bdi_compressor.hpp  cl.hpp  compressor.hpp  ib_init.hpp  testing.hpp
src/: ib_init.c  timer.hpp
src/compressor/: CMakeLists.txt  bdi_compressor.cpp  cl.cpp  kernel.cl
src/ib_pingpong/: CMakeLists.txt  cl_pingpong.cpp  compression_pingpong.cpp  pingpong.cpp  server.cpp
